# UnRayNeo

./: .gitignore  README.md  pyproject.toml  settings.py
conversations/2025/03/18/: short-summary.txt
conversations/2025/03/19/: fuckups.txt  important-findings.txt  long-summary.txt  todos.txt
conversations/_current/: fuckups.md  important-findings.md  summary.md  todos.md
conversations/old/2025-03-20/: fuckups.txt  important-findings.txt  long-summary.txt  short-summary.txt  todos.txt
conversations/sessions/78b877fb-166b-438a-a6e3-45038f2bae05/: start_time.txt
conversations/sessions/da108c0b-e386-46e8-9a1d-ba5971d5e467/: timestamp.txt
unrayneo/: __init__.py  cli.py  command_logger.py  dump_raw_partitions.py  full_system_dump.py  partition_info.py  screenshot.py  settings_utils.py  system_dump.py  wifi.py
